# robot_catrina

./: Cargo.toml  README.md  config.json  face_tracker.py  main.py
arduino/: arduino.ino
src/: animator.rs  arduino.rs  catrina.rs  config.rs  face_tracker.rs  main.rs  sound.rs
src/catrina/: animation.rs  animations.rs  mod.rs
